--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
                 }
         </style>
     </head>
-    
+    <!-- Comentário -->
     <body>
         <h2>Contemplamento</h2>
         <div>
-            Olá, mundo!<br>
+            <p>Esta é uma página de testes.</p>
         </div>
-        <br>
-        <hr>
+        <br><hr>
         <footer>@renn - novembro de 2021</footer>
     </body>
- 
 </html>
