--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
     <head>
         <meta charset="utf-8">
         <title>Contemplamento</title>
-        <style>
-            body{ 
-                background-color: black; 
-                color:white;
-                }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <!-- Comentário -->
     <body>
-        <h2>Contemplamento</h2>
-        <div>
-            <p>Esta é uma página de testes.</p>
+        <div class="container">
+            <header>CONTEMPLAMENTO</header>
+            <div id=menu>
+                <a href="#">Navegação 1</a>
+                <a href="#">Navegação 2</a>
+                <a href="#">Navegação 3</a>
+            </div>
+            <div id="conteudo">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet facilisis magna etiam tempor orci. Nec nam aliquam sem et tortor consequat. Ac odio tempor orci dapibus ultrices. Sagittis purus sit amet volutpat consequat mauris. Nisi vitae suscipit tellus mauris a. Consectetur adipiscing elit ut aliquam purus. Tortor consequat id porta nibh venenatis cras. Pellentesque habitant morbi tristique senectus et netus et. Aliquam sem et tortor consequat id porta nibh venenatis cras.
+<br><br>
+Viverra ipsum nunc aliquet bibendum enim facilisis gravida neque. Ut tristique et egestas quis. Praesent semper feugiat nibh sed pulvinar proin gravida hendrerit lectus. Cum sociis natoque penatibus et. Nec sagittis aliquam malesuada bibendum arcu. In massa tempor nec feugiat nisl pretium fusce id velit. Non arcu risus quis varius quam quisque id diam. Sit amet massa vitae tortor condimentum lacinia quis vel. In iaculis nunc sed augue lacus viverra. Fermentum dui faucibus in ornare quam viverra orci. Volutpat blandit aliquam etiam erat. Dapibus ultrices in iaculis nunc sed augue lacus. Dolor sit amet consectetur adipiscing elit. Et malesuada fames ac turpis egestas integer.
+<br><br>
+Sit amet risus nullam eget felis eget nunc lobortis mattis. Bibendum at varius vel pharetra vel turpis nunc. Iaculis at erat pellentesque adipiscing commodo elit at imperdiet dui. Enim lobortis scelerisque fermentum dui faucibus in. Parturient montes nascetur ridiculus mus mauris vitae. Sed felis eget velit aliquet. A diam maecenas sed enim ut sem viverra aliquet. Ipsum consequat nisl vel pretium lectus quam id leo. Laoreet sit amet cursus sit amet. Enim eu turpis egestas pretium. Adipiscing enim eu turpis egestas pretium aenean pharetra magna. Nullam vehicula ipsum a arcu. Dui vivamus arcu felis bibendum ut. Ultrices gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Proin libero nunc consequat interdum varius sit amet mattis vulputate. In iaculis nunc sed augue lacus viverra vitae congue. Est ullamcorper eget nulla facilisi etiam dignissim diam quis. Et pharetra pharetra massa massa ultricies. Feugiat nisl pretium fusce id. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in dictum.
+            </div>
+            <footer>@renn - novembro de 2021</footer>
         </div>
-        <br><hr>
-        <footer>@renn - novembro de 2021</footer>
     </body>
 </html>
