--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
         <meta charset="utf-8">
         <title>Contemplamento</title>
         <link rel="stylesheet" href="style.css">
+        <!-- Ajustar tela -->
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <!-- Carregar fontes do google -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Syne+Mono&display=swap" rel="stylesheet">
     </head>
-    <!-- Comentário -->
     <body>
         <div class="container">
             <header>CONTEMPLAMENTO</header>
             <div id=menu>
-                <a href="#">Navegação 1</a>
-                <a href="#">Navegação 2</a>
-                <a href="#">Navegação 3</a>
-                <a href="#">Navegação 4</a>
-                <a href="#">Navegação 5</a>
+                <a href="index.html">TO_</a>
+                <a href="#">READ/</a>
+                <a href="#">PLAY/</a>
+                <a href="#">SEE/</a>
+                <a href="remember.html">REMEMBER</a>
             </div>
             <div id="conteudo">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet facilisis magna etiam tempor orci. Nec nam aliquam sem et tortor consequat. Ac odio tempor orci dapibus ultrices. Sagittis purus sit amet volutpat consequat mauris. Nisi vitae suscipit tellus mauris a. Consectetur adipiscing elit ut aliquam purus. Tortor consequat id porta nibh venenatis cras. Pellentesque habitant morbi tristique senectus et netus et. Aliquam sem et tortor consequat id porta nibh venenatis cras.
