--- a/play.html
+++ b/play.html
@@ -22,8 +22,8 @@
                 <a href="remember.html">REMEMBER</a>
             </div>
             <main>
-                <div id="remember">
-                    <p>MEMENTO MORI</p>
+                <div id="play">
+                    <p>Jogos</p>
                 </div>
             </main>
             <footer>@renn - novembro de 2021</footer>
