--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <header>CONTEMPLAMENTO</header>
             <div id=menu>
                 <a href="index.html">TO_</a>
-                <a href="#">READ/</a>
-                <a href="#">PLAY/</a>
-                <a href="#">SEE/</a>
+                <a href="read.html">READ/</a>
+                <a href="play.html">PLAY/</a>
+                <a href="see.html">SEE/</a>
                 <a href="remember.html">REMEMBER</a>
             </div>
             <main>
