--- a/404.html
+++ b/404.html
@@ -22,8 +22,9 @@
                 <a href="remember.html">REMEMBER</a>
             </div>
             <main>
-                <div id="remember">
-                    <p>404</p>
+                <div id="notfound">
+                    <p>ERROR 404</p>
+                    <p>PAGE NOT FOUND</p>
                 </div>
             </main>
             <footer>@renn - novembro de 2021</footer>
