--- a/read.html
+++ b/read.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Contemplamento</title>
-        <link rel="stylesheet" href="style.css">
         <!-- Ajustar tela -->
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <!-- Importar CSS -->
+        <link rel="stylesheet" href="css/style.css">
+        <!-- Importar JS -->
+        <script src="js/script.js"></script>
         <!-- Carregar fontes do google -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
