--- a/remember.html
+++ b/remember.html
@@ -7,8 +7,6 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <!-- Importar CSS -->
         <link rel="stylesheet" href="css/style.css">
-        <!-- Importar JS -->
-        <script src="js/script.js"></script>
         <!-- Carregar fontes do google -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +27,12 @@
                     <p>MEMENTO MORI</p>
                 </div>
             </main>
-            <footer>@renn - novembro de 2021</footer>
+            <footer>
+                @renn - novembro de 2021
+                <!-- Importar JS -->
+                <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+                <script src="js/script.js"></script>
+            </footer>
         </div>
     </body>
 </html>
