--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Syne+Mono&display=swap" rel="stylesheet">
     </head>
     <body onunload="saveCookie()" onload="restoreCookie()">
+        <div id="headergltch">
+            <header class="glitch" data-text="CONTEMPLAMENTO">CONTEMPLAMENTO</header>
+        </div>
         <div class="container">
-            <header>CONTEMPLAMENTO</header>
             <div id=menu>
                 <a href="index.html">TO_</a>
                 <a href="read.html">READ/</a>
