--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Syne+Mono&display=swap" rel="stylesheet">
     </head>
     <body onunload="saveCookie()" onload="restoreCookie()">
-        <div id="headergltch">
-            <header class="glitch" data-text="CONTEMPLAMENTO">CONTEMPLAMENTO</header>
-        </div>
+        <header>CONTEMPLAMENTO</header>
         <div class="container">
             <div id=menu>
                 <a href="index.html">TO_</a>
