--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="container">
-            <header class="glitch" data-text="CONTEMPLAMENTO">CONTEMPLAMENTO</header>
+            <header>OPS...</header>
             <div id=menu>
                 <a href="index.html">TO_</a>
                 <a href="read.html">READ/</a>
@@ -24,7 +24,7 @@
             </div>
             <main>
                 <div id="notfound">
-                    <p class="glitch" data-text="ERROR 404">ERROR 404</p>
+                    <p class="glitch" data-text="ERROR 404">ERROR 404</p><br>
                     <p>PAGE NOT FOUND</p>
                 </div>
             </main>
