--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
-        <title>Contemplamento</title>
+        <title>OPS...</title>
         <!-- Ajustar tela -->
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <!-- Importar CSS -->
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="container">
-            <header>OPS...</header>
+            <header>? ? ? ?</header>
             <div id=menu>
                 <a href="index.html">TO_</a>
                 <a href="read.html">READ/</a>
