--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Carregar fontes do google -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Syne+Mono&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=PT+Mono&family=Syne+Mono&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>CONTEMPLAMENTO</header>
@@ -24,19 +24,56 @@
             </div>
             <main>
                 <div id="tomain">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet facilisis magna etiam tempor orci. Nec nam aliquam sem et tortor consequat. Ac odio tempor orci dapibus ultrices. Sagittis purus sit amet volutpat consequat mauris. Nisi vitae suscipit tellus mauris a. Consectetur adipiscing elit ut aliquam purus. Tortor consequat id porta nibh venenatis cras. Pellentesque habitant morbi tristique senectus et netus et. Aliquam sem et tortor consequat id porta nibh venenatis cras.</p>
+                    <p>
+                        Esta página foi criada com o intuito de aprendizagem e demonstração de diversos conteúdos de minha autoria.
+                    </p><br>
+                    <p>
+                        <h4>Apresentação</h4>
+                        Assinatura: renn<br>
+                        Início do projeto em novembro de 2021<br>
+                        <a href="https://www.instagram.com/rennmotta/" target="_blank">Instagram</a> -
+                        <a href="https://open.spotify.com/user/scopolaminec17h21no4" target="_blank">Spotify</a><br>
+                    </p><br>
+                    <p>
+                        <h4>Roadmap</h4>
+                        <ul>
+                            <li>read: /on hold/</li>
+                            <li>play: MCSMF; Werewolf Online;</li>
+                            <li>see: Spider; Skull;</li>
+                        </ul>
+                    </p>
+                    <p><br>
+                        <h4>Changelog</h4>
+                        <ul>
+                            <li>22.02.2022: versão inicial do site completa (rework main + added content).</li>
+                        </ul>
+                    </p>
                 </div>
                 <div id="readmain">
-                    <p>Histórias</p>
+                    <p class="dim">
+                        Legenda<br>
+                        Horror ou temática sugestiva: [H]<br>
+                        Abstrato: [A]
+                    </p><br><br>
+                    <ul>
+                        <li><a href="read/loveletter.html" target="_blank">[H] Carta de amor</a></li>
+                        <li><a href="read/giveagun.html" target="_blank">[A] Quem deu a ele uma arma?</a></li>
+                        <li><a href="read/empty.html" target="_blank">Vazio</a></li>
+                    </ul>
                 </div>
                 <div id="playmain">
-                    <p>Jogos</p>
+                    <h4>Twine (jogos de texto interativo):</h4><br>
+                    <dl>
+                        <dt>My Cat Stole My Food [previsão: março de 2022]</dt>
+                        <dd>- Jogo abstrato onde o caminho que você escolhe mudará seu destino final.</dd>
+                    </dl>
                 </div>
                 <div id="seemain">
                     <p>Galeria</p>
                 </div>
                 <div id="remembermain">
-                    <p>MEMENTO MORI</p>
+                    <p>MEMENTO MORI</p><br><br>
+                    <p>Atualmente procurando oportunidade de jogar jogos de tabuleiro com pessoas.</p>
                 </div>
             </main>
             <footer>
