--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#" id="to" onclick="toggleTo()">TO_</a>
                 <a href="#" id="read" onclick="toggleRead()">READ/</a>
                 <a href="#" id="play" onclick="togglePlay()">PLAY/</a>
-                <a href="#" id="see" onclick="toggleSee()">SEE/</a>
+                <a href="see.html" id="see">SEE/</a>
                 <a href="#" id="remember" onclick="toggleRemember()">REMEMBER/</a>
             </div>
             <main>
@@ -45,11 +45,13 @@
                     <p><br>
                         <h4>Changelog</h4>
                         <ul>
-                            <li>22.02.2022: versão inicial do site completa (rework main + added content).</li>
+                            <li>23.02.2022: added see.</li>
+                            <li>22.02.2022: versão inicial do site completo (rework main + added read).</li>
                         </ul>
                     </p>
                 </div>
                 <div id="readmain">
+                    <h4>Contos e histórias</h4>
                     <p class="dim">
                         Legenda<br>
                         Horror ou temática sugestiva: [H]<br>
@@ -67,9 +69,6 @@
                         <dt>My Cat Stole My Food [previsão: março de 2022]</dt>
                         <dd>- Jogo abstrato onde o caminho que você escolhe mudará seu destino final.</dd>
                     </dl>
-                </div>
-                <div id="seemain">
-                    <p>Galeria</p>
                 </div>
                 <div id="remembermain">
                     <p>MEMENTO MORI</p><br><br>
