--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                     </ul>
                 </div>
                 <div id="playmain">
-                    <h4>Twine (jogos de texto interativo):</h4><br>
+                    <h4>Twine:</h4><br>
                     <dl>
                         <dt>My Cat Stole My Food [previsão: março de 2022]</dt>
-                        <dd>- Jogo abstrato onde o caminho que você escolhe mudará seu destino final.</dd>
+                        <dd>--- Jogo de texto interativo onde as escolhas levam a finais diferentes.</dd>
                     </dl>
                 </div>
                 <div id="remembermain">
