--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
                         <h4>Roadmap</h4>
                         <ul>
                             <li>read: /on hold/</li>
-                            <li>play: MCSMF; Werewolf Online;</li>
+                            <li>play: MCSMF; Simple RPG; WO;</li>
                             <li>see: Spider; Skull;</li>
                         </ul>
                     </p>
                     <p><br>
                         <h4>Changelog</h4>
                         <ul>
+                            <li>25.02.2022: added play preview.</li>
                             <li>23.02.2022: added see.</li>
                             <li>22.02.2022: versão inicial do site completo (rework main + added read).</li>
                         </ul>
@@ -64,10 +65,12 @@
                     </ul>
                 </div>
                 <div id="playmain">
-                    <h4>Twine:</h4><br>
+                    <h4>Twine:</h4><br><br>
                     <dl>
-                        <dt>My Cat Stole My Food [previsão: março de 2022]</dt>
-                        <dd>--- Jogo de texto interativo onde as escolhas levam a finais diferentes.</dd>
+                        <dt><a href="#" target="_blank">RKR: Role Kill Rest</a> [previsão: março de 2022]</dt>
+                        <dd>--- RPG simples de texto interativo sem complexidades.</dd><br>
+                        <dt><a href="#" target="_blank">My Cat Stole My Food</a> [previsão: março de 2022]</dt>
+                        <dd>--- Jogo de texto interativo onde as escolhas levam a finais diferentes.</dd><br>
                     </dl>
                 </div>
                 <div id="remembermain">
