projeto em espera por algum tempo

--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
                     <p>
                         <h4>Roadmap</h4>
                         <ul>
-                            <li>read: /on hold/</li>
-                            <li>play: MCSMF; WO;</li>
-                            <li>see: Spider; Skull;</li>
+                            <li>read: /sem futuras previsões/</li>
+                            <li>play: /em espera/; MCSMF; WO;</li>
+                            <li>see: /em espera/; Spider; Skull;</li>
                         </ul>
                     </p>
                     <p><br>
                         <h4>Changelog</h4>
                         <ul>
+                            <li>04.03.2022: projeto posto em espera devido a problemas de saúde.</li>
                             <li>26.02.2022: added RKR game.</li>
                             <li>25.02.2022: added play preview.</li>
                             <li>23.02.2022: added see.</li>
@@ -70,7 +71,7 @@
                     <dl>
                         <dt><a href="play/rkr.html" target="_blank">RKR: Role Kill Rest</a></dt>
                         <dd>--- RPG simples de texto interativo sem complexidades.</dd><br>
-                        <dt><a href="#" target="_blank">My Cat Stole My Food</a> [previsão: março de 2022]</dt>
+                        <dt><a href="#" target="_blank">My Cat Stole My Food</a> [previsão: ?? de 2022]</dt>
                         <dd>--- Jogo de texto interativo onde as escolhas levam a finais diferentes.</dd><br>
                     </dl>
                 </div>
