--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
                         <h4>Roadmap</h4>
                         <ul>
                             <li>read: /sem futuras previsões/</li>
-                            <li>play: /em espera/; MCSMF; WO;</li>
-                            <li>see: /em espera/; Spider; Skull;</li>
+                            <li>play: Elisa; MCSMF; WO;</li>
+                            <li>see: Spider; Skull;</li>
                         </ul>
                     </p>
                     <p><br>
                         <h4>Changelog</h4>
                         <ul>
+                            <li>07.06.2022: contos "protegidos".</li>
                             <li>04.03.2022: projeto posto em espera devido a problemas de saúde.</li>
                             <li>26.02.2022: added RKR game.</li>
                             <li>25.02.2022: added play preview.</li>
@@ -57,13 +58,14 @@
                     <h4>Contos e histórias</h4>
                     <p class="dim">
                         Legenda<br>
-                        Horror ou temática sugestiva: [H]<br>
-                        Abstrato: [A]
+                        [P] Requer senha.<br>
+                        [H] Conteúdo sensível.<br>
+                        [A] Abstrato.
                     </p><br><br>
-                    <ul>
-                        <li><a href="read/loveletter.html" target="_blank">[H] Carta de amor</a></li>
+                    <ul class="contos">
+                        <li><a id="loveletter" onclick="protected(event)" href="#">[P] Carta de amor</a></li>
                         <li><a href="read/giveagun.html" target="_blank">[A] Quem deu a ele uma arma?</a></li>
-                        <li><a href="read/empty.html" target="_blank">Vazio</a></li>
+                        <li><a href="read/empty.html" target="_blank">[H] Vazio</a></li>
                     </ul>
                 </div>
                 <div id="playmain">
