remove name rkr fix

--- a/play/rkr.html
+++ b/play/rkr.html
@@ -148,6 +148,7 @@ config.history.controls = false;
 &lt;&lt;set $for to 0&gt;&gt;
 &lt;&lt;set $adv to 0&gt;&gt;
 </tw-passagedata><tw-passagedata pid="2" name="main" tags="" position="313,252" size="100,100">&lt;&lt;set $location to &quot;Guilda&quot;&gt;&gt;
+&lt;&lt;set $name to &quot;Desafiante&quot;&gt;&gt;
 Na parede da guilda há um quadro cheio com avisos de recompensas para matar monstros e a localização da masmorra mais próxima.&lt;br&gt;
 &lt;&lt;if lastVisited(&quot;fight&quot;) is 1&gt;&gt;
 	A recepcionista lhe entrega um saquinho de moedas por sua última missão concluida.&lt;br&gt;
