--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                     </p><br>
                     <p>
                         <h4>Apresentação</h4>
-                        Assinatura: renn<br>
+                        Assinatura: renn / scopolamine<br>
+                        Nome em jogos: scopolamina<br>
                         Início do projeto em novembro de 2021<br>
                         <a href="https://www.instagram.com/rennmotta/" target="_blank">Instagram</a> -
                         <a href="https://open.spotify.com/user/scopolaminec17h21no4" target="_blank">Spotify</a><br>
@@ -37,9 +38,9 @@
                     <p>
                         <h4>Roadmap</h4>
                         <ul>
-                            <li>read: /sem futuras previsões/</li>
+                            <li>read: 1</li>
                             <li>play: Elisa; MCSMF; WO;</li>
-                            <li>see: Spider; Skull;</li>
+                            <li>see: desenhos;</li>
                         </ul>
                     </p>
                     <p><br>
@@ -79,7 +80,7 @@
                 </div>
                 <div id="remembermain">
                     <p>MEMENTO MORI</p><br><br>
-                    <p>Atualmente procurando oportunidade de jogar jogos de tabuleiro com pessoas.</p>
+                    <p>Qual o ponto da loucura?</p>
                 </div>
             </main>
             <footer>
