--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
                     <p>
                         <h4>Roadmap</h4>
                         <ul>
-                            <li>read: 1</li>
-                            <li>play: Elisa; MCSMF; WO;</li>
+                            <li>read: -</li>
+                            <li>play: RKRE; Elisa; MCSMF; WO; (...);</li>
                             <li>see: desenhos;</li>
                         </ul>
                     </p>
                     <p><br>
                         <h4>Changelog</h4>
                         <ul>
+                            <li>31.12.2022: rkre download.</li>
                             <li>07.06.2022: contos "protegidos".</li>
                             <li>04.03.2022: projeto posto em espera devido a problemas de saúde.</li>
                             <li>26.02.2022: added RKR game.</li>
@@ -74,8 +75,16 @@
                     <dl>
                         <dt><a href="play/rkr.html" target="_blank">RKR: Role Kill Rest</a></dt>
                         <dd>--- RPG simples de texto interativo sem complexidades.</dd><br>
+                        <dt><a href="#" target="_blank">RKR - Extended</a> [previsão: janeiro de 2023]</dt>
+                        <dd>--- Jogo feito em java para uma game jam com intenção de ser um tipo de remake do RKR em java.</dd><br>
                         <dt><a href="#" target="_blank">My Cat Stole My Food</a> [previsão: ?? de 2022]</dt>
                         <dd>--- Jogo de texto interativo onde as escolhas levam a finais diferentes.</dd><br>
+                    </dl>
+                    <h4>Java:</h4><br><br>
+                    <dl>
+                        <dt><a href="play/RKRE.7z" download>RKRE</a></dt>
+                        <dd>--- Você caiu em uma caverna e não há como voltar. Avance e encontre uma saída para voltar a superfície enquanto lida com criaturas que querem te matar e surpresas duvidosas.</dd><br>
+                        <dd>Requesitos: <a href="https://www.oracle.com/java/technologies/downloads/#java17" target="_blank">JAVA 17</a></dd>
                     </dl>
                 </div>
                 <div id="remembermain">
