rkre game revise

--- a/index.html
+++ b/index.html
@@ -75,16 +75,14 @@
                     <dl>
                         <dt><a href="play/rkr.html" target="_blank">RKR: Role Kill Rest</a></dt>
                         <dd>--- RPG simples de texto interativo sem complexidades.</dd><br>
-                        <dt><a href="#" target="_blank">RKR - Extended</a> [previsão: janeiro de 2023]</dt>
-                        <dd>--- Jogo feito em java para uma game jam com intenção de ser um tipo de remake do RKR em java.</dd><br>
                         <dt><a href="#" target="_blank">My Cat Stole My Food</a> [previsão: ?? de 2022]</dt>
                         <dd>--- Jogo de texto interativo onde as escolhas levam a finais diferentes.</dd><br>
                     </dl>
-                    <h4>Java:</h4><br><br>
+                    <br><h4>Java:</h4><br><br>
                     <dl>
-                        <dt><a href="play/RKRE.7z" download>RKRE</a></dt>
-                        <dd>--- Você caiu em uma caverna e não há como voltar. Avance e encontre uma saída para voltar a superfície enquanto lida com criaturas que querem te matar e surpresas duvidosas.</dd><br>
-                        <dd>Requesitos: <a href="https://www.oracle.com/java/technologies/downloads/#java17" target="_blank">JAVA 17</a></dd>
+                        <dt><a href="play/RKRE.7z" download target="_blank">RKRE</a></dt>
+                        <dd>--- Você caiu em uma caverna e não há como voltar. Avance e encontre uma saída para voltar a superfície enquanto lida com criaturas que querem te matar e surpresas duvidosas.<br>
+                        Requesitos: <a href="https://www.oracle.com/java/technologies/downloads/#java17" target="_blank">JAVA 17</a></dd><br>
                     </dl>
                 </div>
                 <div id="remembermain">
